force-app/main/default/objects/Health_Score__c/Health_Score__c.object-meta.xml
<CustomObject>
    <label>Health Score</label>
    <nameField>
        <displayFormat>HS-{00000000}</displayFormat>
        <label>Health Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>