force-app/main/default/objects/Health_Score__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Health Scores</relationshipLabel>
    <relationshipName>Health_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>