force-app/main/default/objects/Health_Score__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>