force-app/main/default/objects/Health_Score__c/fields/Client_Business_Health__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Health__c</fullName>
    <label>Client Business Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growing</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>