force-app/main/default/objects/Health_Score__c/fields/Client_does_not_allow_email_marketing__c.field-meta.xml
<CustomField>
    <fullName>Client_does_not_allow_email_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client does not allow email marketing</label>
    <type>Checkbox</type>
</CustomField>