force-app/main/default/objects/Health_Score__c/fields/Client_doesn_t_complete_survey__c.field-meta.xml
<CustomField>
    <fullName>Client_doesn_t_complete_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client doesn&apos;t complete survey</label>
    <type>Checkbox</type>
</CustomField>