force-app/main/default/objects/Health_Score__c/fields/Client_NPS__c.field-meta.xml
<CustomField>
    <fullName>Client_NPS__c</fullName>
    <label>Client NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>