force-app/main/default/objects/Health_Score__c/fields/Competitor_w_in_account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_w_in_account__c</fullName>
    <label>Competitor w/in account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>