force-app/main/default/objects/Health_Score__c/fields/Contract_Path_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Path_Status__c</fullName>
    <label>Contract Path Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green Partner</fullName>
            </value>
            <value>
                <fullName>Yellow Partner</fullName>
            </value>
            <value>
                <fullName>Red/Black Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>