force-app/main/default/objects/Health_Score__c/fields/Cross_Sells_Expansions__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sells_Expansions__c</fullName>
    <label>Cross Sells/Expansions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expansion/cross sell opp/no additional programs to sell</fullName>
            </value>
            <value>
                <fullName>On path to discussion</fullName>
            </value>
            <value>
                <fullName>Partnership does not allow expansion</fullName>
            </value>
            <value>
                <fullName>Client declined discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>