force-app/main/default/objects/Health_Score__c/fields/CSM_Action_Steps__c.field-meta.xml
<CustomField>
    <fullName>CSM_Action_Steps__c</fullName>
    <label>CSM Action Steps</label>
    <type>TextArea</type>
</CustomField>