force-app/main/default/objects/Health_Score__c/fields/Diastolic_BP_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Diastolic_BP_Reduction__c</fullName>
    <label>Diastolic BP Reduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>