force-app/main/default/objects/Health_Score__c/fields/Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>Display_Fields__c</fullName>
    <label>Display Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>