force-app/main/default/objects/Health_Score__c/fields/eHba1c_Reduction__c.field-meta.xml
<CustomField>
    <fullName>eHba1c_Reduction__c</fullName>
    <label>eHba1c Reduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>