force-app/main/default/objects/Health_Score__c/fields/Element_Section__c.field-meta.xml
<CustomField>
    <fullName>Element_Section__c</fullName>
    <label>Element Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>