force-app/main/default/objects/Health_Score__c/fields/Executive_Sponsor_Interaction_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Interaction_Engagement__c</fullName>
    <label>Executive Sponsor Interaction/Engagement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seat at executive sponsor table</fullName>
            </value>
            <value>
                <fullName>Livongo executive relationship</fullName>
            </value>
            <value>
                <fullName>Client Advisory Board</fullName>
            </value>
            <value>
                <fullName>Operational engagement</fullName>
            </value>
            <value>
                <fullName>Reference/case study/white paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>