force-app/main/default/objects/Health_Score__c/fields/Immediate_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action_Needed__c</fullName>
    <label>Immediate Action Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
            <value>
                <fullName>Other Nuclear Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>