force-app/main/default/objects/Health_Score__c/fields/Interaction_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Cadence__c</fullName>
    <label>Interaction Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting established cadence</fullName>
            </value>
            <value>
                <fullName>No meeting cadence/consistently cancels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>