force-app/main/default/objects/Health_Score__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Issues</fullName>
            </value>
            <value>
                <fullName>Data Issues</fullName>
            </value>
            <value>
                <fullName>Billing Issues</fullName>
            </value>
            <value>
                <fullName>Eligibility Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>