force-app/main/default/objects/Health_Score__c/fields/Meeting_Established_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Established_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Established Cadence</label>
    <type>Checkbox</type>
</CustomField>