force-app/main/default/objects/Health_Score__c/fields/Member_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Member_Satisfaction__c</fullName>
    <label>Member Satisfaction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>