force-app/main/default/objects/Health_Score__c/fields/Participating_in_any_optimized_campaigns__c.field-meta.xml
<CustomField>
    <fullName>Participating_in_any_optimized_campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participating in any optimized campaigns</label>
    <type>Checkbox</type>
</CustomField>