force-app/main/default/objects/Health_Score__c/fields/Population_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Population_Refresh__c</fullName>
    <label>Population Refresh</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>within 3 months</fullName>
            </value>
            <value>
                <fullName>&gt; 3 months ago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>