force-app/main/default/objects/Health_Score__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>