force-app/main/default/objects/Health_Score__c/fields/ProgramScoreUpdated__c.field-meta.xml
<CustomField>
    <fullName>ProgramScoreUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProgramScoreUpdated</label>
    <type>Checkbox</type>
</CustomField>