force-app/main/default/objects/Health_Score__c/fields/Recommended_Action_Steps__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action_Steps__c</fullName>
    <label>Recommended Action Steps</label>
    <type>TextArea</type>
</CustomField>