force-app/main/default/objects/Health_Score__c/fields/ROI_Status_HTN__c.field-meta.xml
<CustomField>
    <fullName>ROI_Status_HTN__c</fullName>
    <label>ROI Status - HTN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client &lt;1.25 years on program or partnership doesn&apos;t allow ROI</fullName>
            </value>
            <value>
                <fullName>Client &gt;1.25 with 100 activated, claims based completed</fullName>
            </value>
            <value>
                <fullName>Client &gt;1.25 years with no ROI completed</fullName>
            </value>
            <value>
                <fullName>Client &gt; 1.25 years with ROI completed but negative results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>