force-app/main/default/objects/Health_Score__c/fields/Systolic_BP_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Systolic_BP_Reduction__c</fullName>
    <label>Systolic BP Reduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>