force-app/main/default/objects/Health_Score__c/recordTypes/Account_Health_Score.recordType-meta.xml
<RecordType>
    <fullName>Account_Health_Score</fullName>
    <active>true</active>
    <label>Account Health Score</label>
</RecordType>