force-app/main/default/objects/Health_Score__c/recordTypes/Program_Health_Score.recordType-meta.xml
<RecordType>
    <fullName>Program_Health_Score</fullName>
    <active>true</active>
    <label>Program Health Score</label>
</RecordType>